<resources>
    <string name="app_name">funAkhir</string>

    <!--initial and literal value-->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="zero_number">0</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_fab">Favorites User</string>

    <!--image content desc-->
    <string name="avatar">User\'s Avatar</string>
    <string name="octocat">GitHub Octocat</string>

    <!--data related-->
    <string name="profile">%s\'s Profile</string>
    <string name="profile_detail">%s\'s Profile Detail</string>
    <string name="visit_creator">Visit Creator\'s Profile</string>
    <string name="search">Who are you looking for?</string>
    <string name="zero_following">%s doesn\'t follow anyone</string>
    <string name="zero_followers">%s has no followers</string>
    <string name="not_found">Oh no! User not found :(\n\nMake sure you spelled the username right</string>
    <string name="begin_hint">Welcome to GitHub User App! :)\n\nSearch the username and find amazing people!</string>
    <string name="zero_favorite">You haven\'t favorited any users yet.\n\nClick the heart on someone\'s profile and find them here!</string>
    <string name="connection_failure">Failed to retrieve the data, please check your connection.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>