<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar_received"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar"
        app:civ_border_color="@color/grey"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_received"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_avatar_received"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_username_received"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username"
        android:layout_marginTop="2dp"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_name_received"
        app:layout_constraintStart_toStartOf="@+id/tv_name_received"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_received"
        app:layout_constraintVertical_bias="0.0" />





    <!-- start of the numeric data -->
    <TextView
        android:id="@+id/tv_repository_received"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/zero_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers_received"
        app:layout_constraintEnd_toStartOf="@+id/tv_followers_received"
        app:layout_constraintStart_toStartOf="@id/tv_username_received"
        app:layout_constraintTop_toTopOf="@+id/tv_followers_received" />

    <View
        android:id="@+id/div1"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers_received"
        app:layout_constraintEnd_toStartOf="@+id/tv_followers_received"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/tv_followers_received" />

    <TextView
        android:id="@+id/tv_followers_received"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/zero_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_following_received"
        app:layout_constraintStart_toEndOf="@+id/tv_repository_received"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_received"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/div2"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers_received"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/tv_followers_received"
        app:layout_constraintTop_toTopOf="@+id/tv_followers_received" />

    <TextView
        android:id="@+id/tv_following_received"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/zero_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers_received"
        app:layout_constraintEnd_toEndOf="@id/tv_username_received"
        app:layout_constraintStart_toEndOf="@+id/tv_followers_received"
        app:layout_constraintTop_toTopOf="@+id/tv_followers_received" />

    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/repository"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintEnd_toStartOf="@+id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_username_received"
        app:layout_constraintTop_toTopOf="@+id/tv_followers" />

    <View
        android:id="@+id/div3"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintEnd_toStartOf="@+id/tv_followers"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/div1" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/followers"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@id/tabs"
        app:layout_constraintEnd_toStartOf="@+id/tv_following"
        app:layout_constraintStart_toEndOf="@+id/tv_repository"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers_received"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/div4"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintTop_toBottomOf="@id/div2" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/following"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
        app:layout_constraintEnd_toEndOf="@id/tv_username_received"
        app:layout_constraintStart_toEndOf="@+id/tv_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_followers" />
    <!-- end of the numeric data -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="103dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="309dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        app:layout_constraintVertical_bias="0.0"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/pb_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <include
        android:id="@+id/include_favorite"
        layout="@layout/include_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>